fix border radius and fix spacing of difficulty tag under title

--- a/src/demo/demo-components/DemoChooseTextCard/DemoChooseTextCard.css
+++ b/src/demo/demo-components/DemoChooseTextCard/DemoChooseTextCard.css
@@ -1,5 +1,5 @@
 .demo-choose-text-currently-reading {
-  border-radius: 5%;
+  border-radius: 10px;
   border: solid #006769 2px;
 }
 
